Carpio: Cambios Menores

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,8 +19,11 @@ doctrine:
                 url: '%env(resolve:DATABASE_URL)%'
             postgre:
                 driver: pdo_pgsql
-                server_version: '9.5'
+                server_version: 9.5.12
                 charset: UTF8
+
+                # With Symfony 3.3, remove the `resolve:` prefix
+                url: '%env(resolve:DATABASE_URL)%'
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
