--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "php": "^7.0.8",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^1.8",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
@@ -13,9 +14,13 @@
         "symfony/framework-bundle": "^3.4",
         "symfony/http-foundation": "^3.4",
         "symfony/lts": "^3",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.2",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "^3.4",
+        "symfony/security-csrf": "^3.4",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^3.4",
+        "symfony/validator": "^3.4",
         "symfony/web-server-bundle": "^3.4",
         "symfony/yaml": "^3.4"
     },
@@ -65,5 +70,12 @@
             "id": "01C222Z8YNSQCDY1MD1QWE0E9H",
             "allow-contrib": false
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packagist.org"
+        },
+        { "packagist": false }
+    ]
 }
