--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,14 @@
     "require": {
         "php": "^7.0.8",
         "ext-iconv": "*",
+        "cron/cron-bundle": "^2.0",
         "doctrine/doctrine-bundle": "^1.8",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
         "symfony/css-selector": "^3.4",
-        "symfony/flex": "^1.0",
+        "symfony/dotenv": "^3.4",
+        "symfony/flex": "^1.1",
         "symfony/form": "^3.4",
         "symfony/framework-bundle": "^3.4",
         "symfony/http-foundation": "^3.4",
@@ -28,7 +30,6 @@
     },
     "require-dev": {
         "symfony/dependency-injection": "^3.4",
-        "symfony/dotenv": "^3.4",
         "symfony/monolog-bundle": "^3.3",
         "symfony/profiler-pack": "^1.0",
         "symfony/thanks": "^1.0"
